Fix the error where header menu stays behind the banner

--- a/src/css/layout/_header.scss
+++ b/src/css/layout/_header.scss
@@ -12,6 +12,7 @@
 .header_sm {
   display: block;
   padding: 1rem 0;
+  z-index: 3;
 }
 .menuButton {
   width: 24px;
